# pyReSpect-time

./: .gitignore  LICENSE  README.md  common.py  contSpec.py  discSpec.py  discSpecMagic.py  interactContSpec.ipynb  interactDiscSpec.ipynb  pyproject.toml  quickstart.py  test.py  testKernel.py
.ipynb_checkpoints/: interactContSpec-checkpoint.ipynb  interactDiscSpec-checkpoint.ipynb
pyrespect_time/: __init__.py  config.py  continuous.py  discrete.py  io.py  kernels.py  plotting.py  solver.py
tests/: readme
