[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"


[project]
name = "pyrespect_time"
version = "2.0"
description = "Extract continuous and discrete relaxation spectra from G(t) data"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Sachin Shanbhag", email = "shane5ul@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4",
    "scipy>=1.17",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["pyrespect_time"]


[project.urls]
Repository = "https://github.com/shane5ul/pyReSpect-time"
